[project]
name = "weather-lanngraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
